--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,8 @@ before_install:
   - if [[ $TRAVIS_OS_NAME == linux && $LANGUAGE == dotnet ]]; then
       sudo apt-get install -yq apt-transport-https;
       curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg;
+      sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg;
+      sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > /etc/apt/sources.list.d/dotnetdev.list';
       sudo apt-get -qq update;
       sudo apt-get install -yq dotnet-sdk-2.1;
     fi
