--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,8 @@ before_install:
       sudo apt-get install -yq apt-transport-https;
       curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg;
       sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg;
-      sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > /etc/apt/sources.list.d/dotnetdev.list';
+      echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > dotnetdev.list;
+      sudo mv dotnetdev.list /etc/apt/sources.list.d/dotnetdev.list;
       sudo apt-get -qq update;
       sudo apt-get install -yq dotnet-sdk-2.1;
     fi
