Fixup CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ option(BUILD_DOTNET "Build .Net Package" OFF)
 if(BUILD_DOTNET)
   include(dotnet)
 endif()
-option(BUILD_DOTNET "Build Java Package" OFF)
+option(BUILD_JAVA "Build Java Package" OFF)
 if(BUILD_JAVA)
   include(java)
 endif()
