--- a/Bar/CMakeLists.txt
+++ b/Bar/CMakeLists.txt
@@ -1,47 +1,29 @@
-project(Bar VERSION 1.0.0 LANGUAGES CXX)
-
-if(MSVC)
-  # Second, for multi-config builds (e.g. msvc)
-  foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
-    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
-  endforeach()
-endif()
-
-file(GLOB _HDRS "include/bar/*.hpp" "include/bar/*.hxx")
-file(GLOB _SRCS "src/*.[hc]pp")
-
-add_library(${PROJECT_NAME} ${_HDRS} ${_SRCS})
-target_include_directories(${PROJECT_NAME} PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-set_target_properties(${PROJECT_NAME} PROPERTIES
+add_library(Bar "")
+target_sources(Bar
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/bar/Bar.hpp>
+    $<INSTALL_INTERFACE:include/bar/Bar.hpp>
+  PRIVATE
+    src/Bar.cpp
+)
+target_include_directories(Bar
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+set_target_properties(Bar PROPERTIES
   VERSION ${PROJECT_VERSION}
-  PUBLIC_HEADER ${_HDRS})
-#target_link_libraries(${PROJECT_NAME} PUBLIC ...)
-add_library(CMakeSwig::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
-
-# Python Wrapper
-if(BUILD_PYTHON)
-  add_subdirectory(python)
-endif()
-# .Net Wrapper
-if(BUILD_DOTNET)
-  add_subdirectory(dotnet)
-endif()
-# Java Wrapper
-if(BUILD_JAVA)
-  add_subdirectory(java)
-endif()
+  PUBLIC_HEADER $<TARGET_PROPERTY:Bar,INTERFACE_SOURCES>
+)
+#target_link_libraries(Bar PUBLIC ...)
+add_library(CMakeSwig::Bar ALIAS Bar)
 
 # Install
 include(GNUInstallDirs)
-install(TARGETS ${PROJECT_NAME}
+install(TARGETS Bar
   EXPORT CMakeSwigTargets
   PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/bar
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   #RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-  )
+)
