--- a/Foo/CMakeLists.txt
+++ b/Foo/CMakeLists.txt
@@ -1,44 +1,29 @@
-project(Foo VERSION 1.0.0 LANGUAGES CXX)
-
-if(MSVC)
-  # Second, for multi-config builds (e.g. msvc)
-  foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
-    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
-  endforeach()
-endif()
-
-add_library(${PROJECT_NAME} src/Foo.cpp)
-target_include_directories(${PROJECT_NAME} PUBLIC
-  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-set_target_properties(${PROJECT_NAME} PROPERTIES
+add_library(Foo "")
+target_sources(Foo
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/foo/Foo.hpp>
+    $<INSTALL_INTERFACE:include/foo/Foo.hpp>
+  PRIVATE
+    src/Foo.cpp
+)
+target_include_directories(Foo
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+set_target_properties(Foo PROPERTIES
   VERSION ${PROJECT_VERSION}
-  PUBLIC_HEADER "include/foo/Foo.hpp")
-#target_link_libraries(${PROJECT_NAME} PUBLIC ...)
-add_library(CMakeSwig::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
-
-# Python Wrapper
-if(BUILD_PYTHON)
-  add_subdirectory(python)
-endif()
-# .Net Wrapper
-if(BUILD_DOTNET)
-  add_subdirectory(dotnet)
-endif()
-# Java Wrapper
-if(BUILD_JAVA)
-  add_subdirectory(java)
-endif()
+  PUBLIC_HEADER $<TARGET_PROPERTY:Foo,INTERFACE_SOURCES>
+)
+#target_link_libraries(Foo PUBLIC ...)
+add_library(CMakeSwig::Foo ALIAS Foo)
 
 # Install
 include(GNUInstallDirs)
-install(TARGETS ${PROJECT_NAME}
+install(TARGETS Foo
   EXPORT CMakeSwigTargets
   PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/foo
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   #RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-  )
+)
