--- a/FooBar/python/CMakeLists.txt
+++ b/FooBar/python/CMakeLists.txt
@@ -1,47 +1,42 @@
-# Setup SWIG
-find_package(SWIG REQUIRED)
-include(UseSWIG)
-
-# Setup Python
-find_package(PythonInterp REQUIRED)
-find_package(PythonLibs REQUIRED)
-
-# include path for swig foobar.i 'target'
-include_directories(../include)
-set_property(SOURCE foobar.i PROPERTY CPLUSPLUS ON)
-# outdir for .py file
-set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR}/..)
 # outdir for .so file
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..)
 # Second, for multi-config builds (e.g. msvc)
 foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
-    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
+	string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
+	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
+	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
+	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
 endforeach()
 
-# this will generate pyFooBar.py AND _%module%.so
+set_property(SOURCE foobar.i PROPERTY CPLUSPLUS ON)
+set_property(SOURCE foobar.i PROPERTY SWIG_MODULE_NAME pyFooBar)
 swig_add_library(pyFooBar
-	TYPE SHARED
 	LANGUAGE python
-	SOURCES	foobar.i)
-
-# ${SWIG_MODULE_py${PROJECT_NAME}_REAL_NAME} will resolve to _pyFooBar.so TARGET
-target_include_directories(${SWIG_MODULE_pyFooBar_REAL_NAME} PRIVATE
-	${PYTHON_INCLUDE_DIRS})
-target_link_libraries(${SWIG_MODULE_pyFooBar_REAL_NAME} PRIVATE
-	FooBar ${PYTHON_LIBRARIES})
-if(UNIX)
-	if(NOT APPLE)
-		set_target_properties(${SWIG_MODULE_pyFooBar_REAL_NAME} PROPERTIES
-			INSTALL_RPATH	"$ORIGIN")
-	else()
-		set_target_properties(${SWIG_MODULE_pyFooBar_REAL_NAME} PROPERTIES
-			SUFFIX ".so"
-			INSTALL_RPATH	"@loader_path")
-		set_property(TARGET ${SWIG_MODULE_pyFooBar_REAL_NAME} APPEND PROPERTY
-			LINK_FLAGS "-flat_namespace -undefined suppress")
-	endif()
+	OUTPUT_DIR ..
+	SOURCES foobar.i)
+set_property(TARGET pyFooBar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
+target_include_directories(pyFooBar
+	PRIVATE
+	../include
+	${PYTHON_INCLUDE_DIRS}
+	)
+# note: macOS is APPLE and also UNIX !
+if(APPLE)
+	set_target_properties(pyFooBar PROPERTIES
+		SUFFIX ".so"
+		INSTALL_RPATH "@loader_path"
+		)
+	set_property(TARGET pyFooBar APPEND PROPERTY
+		LINK_FLAGS "-flat_namespace -undefined suppress"
+		)
+elseif(UNIX)
+	set_target_properties(pyFooBar PROPERTIES
+		INSTALL_RPATH "$ORIGIN"
+		)
 endif()
+target_link_libraries(pyFooBar
+	PRIVATE
+	FooBar
+	${PYTHON_LIBRARIES}
+	)
