--- a/FooBar/python/CMakeLists.txt
+++ b/FooBar/python/CMakeLists.txt
@@ -1,19 +1,8 @@
-# outdir for .so file
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..)
-# Second, for multi-config builds (e.g. msvc)
-foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
-	string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
-	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
-	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
-	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR}/..)
-endforeach()
-
 set_property(SOURCE foobar.i PROPERTY CPLUSPLUS ON)
 set_property(SOURCE foobar.i PROPERTY SWIG_MODULE_NAME pyFooBar)
 swig_add_library(pyFooBar
 	LANGUAGE python
-	OUTPUT_DIR ..
+	OUTPUT_DIR ${CMAKE_BINARY_DIR}/python/${PROJECT_NAME}/FooBar
 	SOURCES foobar.i)
 set_property(TARGET pyFooBar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
 target_include_directories(pyFooBar
@@ -25,14 +14,14 @@ target_include_directories(pyFooBar
 if(APPLE)
 	set_target_properties(pyFooBar PROPERTIES
 		SUFFIX ".so"
-		INSTALL_RPATH "@loader_path"
+		INSTALL_RPATH "@loader_path;@loader_path/../../${PROJECT_NAME}/.libs"
 		)
 	set_property(TARGET pyFooBar APPEND PROPERTY
 		LINK_FLAGS "-flat_namespace -undefined suppress"
 		)
 elseif(UNIX)
 	set_target_properties(pyFooBar PROPERTIES
-		INSTALL_RPATH "$ORIGIN"
+		INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PROJECT_NAME}/.libs"
 		)
 endif()
 target_link_libraries(pyFooBar
