--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,22 @@ language: generic
 matrix:
   include:
     - os: linux
-      dist: trusty
+      dist: bionic
       language: cpp
       compiler: gcc
       env: LANGUAGE=cpp
     - os: linux
-      dist: trusty
+      dist: bionic
       language: cpp
       compiler: gcc
-      env: LANGUAGE=python2
+      env: LANGUAGE=python
     - os: linux
-      dist: trusty
-      language: cpp
-      compiler: gcc
-      env: LANGUAGE=python3
-    - os: linux
-      dist: trusty
+      dist: bionic
       language: cpp
       compiler: gcc
       env: LANGUAGE=dotnet
     - os: linux
-      dist: trusty
+      dist: bionic
       language: cpp
       compiler: gcc
       env: LANGUAGE=java
@@ -38,12 +33,7 @@ matrix:
       osx_image: xode9.4
       language: cpp
       compiler: clang
-      env: LANGUAGE=python2
-    - os: osx
-      osx_image: xode9.4
-      language: cpp
-      compiler: clang
-      env: LANGUAGE=python3
+      env: LANGUAGE=python
     - os: osx
       osx_image: xode9.4
       language: cpp
