--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,16 +10,12 @@ environment:
   MSBUILD_FLAGS: /verbosity:minimal /maxcpucount
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    CMAKE_GENERATOR: "Visual Studio 16 2019"
     LANGUAGE: cpp
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    CMAKE_GENERATOR: "Visual Studio 16 2019"
     LANGUAGE: python
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    CMAKE_GENERATOR: "Visual Studio 16 2019"
     LANGUAGE: dotnet
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    CMAKE_GENERATOR: "Visual Studio 16 2019"
     LANGUAGE: java
 
 matrix:
@@ -33,10 +29,10 @@ install:
 
 before_build:
   - cmake --version
-  - if "%LANGUAGE%"=="cpp" cmake -S. -Bbuild -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=%configuration%
-  - if "%LANGUAGE%"=="python" cmake -S. -Bbuild -DBUILD_PYTHON=ON -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=%configuration%
-  - if "%LANGUAGE%"=="dotnet" cmake -S. -Bbuild -DBUILD_DOTNET=ON -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=%configuration%
-  - if "%LANGUAGE%"=="java" cmake -S. -Bbuild -DBUILD_JAVA=ON -G "%CMAKE_GENERATOR%" -DCMAKE_BUILD_TYPE=%configuration%
+  - if "%LANGUAGE%"=="cpp" cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=%configuration%
+  - if "%LANGUAGE%"=="python" cmake -S. -Bbuild -DBUILD_PYTHON=ON -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=%configuration%
+  - if "%LANGUAGE%"=="dotnet" cmake -S. -Bbuild -DBUILD_DOTNET=ON -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=%configuration%
+  - if "%LANGUAGE%"=="java" cmake -S. -Bbuild -DBUILD_JAVA=ON -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=%configuration%
 
 build_script:
   - cmake --build build --config %configuration% --target ALL_BUILD -- %MSBUILD_FLAGS%
